# legal-documents-api

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: get_contracts.py  search_cases.py
src/: legal_db.py  main.py  mainlayer.py  models.py
tests/: test_main.py
